--- a/11gy_cpp/11gy_cpp.tex
+++ b/11gy_cpp/11gy_cpp.tex
@@ -12,7 +12,11 @@
 \lstdefinestyle{customc}{
 	belowcaptionskip=1\baselineskip,
 	breaklines=true,
-	frame=L,
+	frame=l,
+	framerule = 2pt,
+	framesep = 5pt,
+	xleftmargin = 3mm,
+	rulecolor = \color{white!50!black},
 	language=C++,
 	showstringspaces=false,
 	basicstyle=\ttfamily,
